--- a/wp-content/css/global.css
+++ b/wp-content/css/global.css
@@ -145,4 +145,15 @@
 	}
 }
 
+.pad-0 {
+	padding: 1em !important;
+}
 
+
+.pad-top-0 {
+	padding-top: 4em !important;
+}
+
+.overflow-none {
+	overflow: auto !important;
+}
