--- a/wp-content/css/global.css
+++ b/wp-content/css/global.css
@@ -2,9 +2,46 @@
 	display: none
 }
 
+.scrollable-item {
+    display: flex;
+    gap: 2em;
+    overflow-x: auto;
+    flex-wrap: nowrap;
+    padding: 2em 0
+}
+    
+.scrollable-item .items-region {
+    background: white;
+    width: 20em;
+    height: 300px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border-radius: 20px;
+    cursor: pointer;
+}
+    
+.items-region .thumbnail-region {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 20px;
+    transition: transform 0.4s ease;
+    z-index: 3;
+    position: relative
+}
+    
+.items-region .thumbnail-region:hover {
+    transform: translateY(-20px);
+    transition: transform 0.4s ease
+}
+    
+.items-region .descriptions {
+    padding: 0.75em 2em
+}
+
 .popup-page {
 	position: fixed;
-	top: 5em;
+top: 5em;
 	width: 100%;
 	height: 100vh;
 	background: #00000090;
@@ -59,6 +96,10 @@
 	padding-top: 5em;
 }
 
+.left-side {
+	box-sizing: border-box;
+}
+
 .left-side img {
 	height: 90%;
 	width: 50em;
@@ -88,23 +129,31 @@
 		padding-top: 0 !important;
 	}
 
+	.right-side p {
+		font-size: 18px;
+	}
+
 	.right-side h3 {
 		padding-top: 0;
 	}
 
 	.right-side .long {
-		width: calc(100% + 10em);
+		max-width: 100%;
 	}
 	
 	.left-side img {
-		height: 10em;
-		width: 95vw;
+		width: 100%;
 		height: 40vh;
 		object-fit: cover;
 		border-radius: 20px;
 	}
 	.right-side i {
 		padding-top: 0
+	}
+
+	.scrollable-item .items-region {
+width: 14em;
+		gap: 1em;
 	}
 }
 
@@ -164,4 +213,8 @@
 
 .overflow-none {
 	overflow: auto !important;
+}
+
+.ft-5 {
+	font-size: 17px !important;
 }
